--- a/laboratorio#2-hellow-word/laboratorio#2.html
+++ b/laboratorio#2-hellow-word/laboratorio#2.html
@@ -3,7 +3,8 @@
 <head>     <title>laboratorio #2</title>
 </head>
 <body>
-    <h1>Hellow Word</h1>
+    <body style="background-color:#E3D6D3;"></body>
+    <center><h1>Hellow Word</h1></center>
 
     <h2>Introduccion al mundo web</h2>
 
