--- a/laboratorio#8/ordenador.html
+++ b/laboratorio#8/ordenador.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="caracteres.css">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-
     <div class="container">
-
         <div class="secondcontainer">
             <h1>Contador de Letras</h1>
-
             <div>
-
                 <form action="" method="get">
                     <div class="input_">
-                        <label for="Cadena">Cadena de texto</label>
-                        <input type="text" id="Cadena">
+                        <label for="cadena">Cadena de texto</label>
+                        <input type="text" id="cadena" size="50">
                     </div>
-
                     <div class="button_">
-
                         <div>
-                            <button type="button" class="clean">Limpiar</button>
+                            <button type="button" id="clean_" class="clean" onclick="clean('cadena')">Limpiar</button>
                         </div>
-
                         <div>
-                            <button type="button" class="calculator">Calcular</button>
+                            <button type="button" id="order_" class="calculator" onclick="order('cadena')">Calcular</button>
                         </div>
-
                     </div>
-
                 </form>
-
             </div>
         </div>
+        <script>
+            $(function(){
+              $('#clean_').click(function(){
+                $('#order_').show();
+              });
+              $('#order_').click(function(){
+                $('#order_').hide();
+              });
+            })
+          </script>
+          <div id="resultado" ><script src="procesos.js"></script></div>
     </div>
-
 </body>
-
 </html>
