--- a/laboratorio#8/ordenador.html
+++ b/laboratorio#8/ordenador.html
@@ -15,7 +15,7 @@
                 <form action="" method="get">
                     <div class="input_">
                         <label for="cadena">Cadena de texto</label>
-                        <input type="text" id="cadena" size="50">
+                        <input type="text" id="cadena">
                     </div>
                     <div class="button_">
                         <div>
@@ -28,17 +28,7 @@
                 </form>
             </div>
         </div>
-        <script>
-            $(function(){
-              $('#clean_').click(function(){
-                $('#order_').show();
-              });
-              $('#order_').click(function(){
-                $('#order_').hide();
-              });
-            })
-          </script>
-          <div id="resultado" ><script src="procesos.js"></script></div>
+         <div><script src="procesos.js"></script></div>
     </div>
 </body>
 </html>
