correccion de errores JS

--- a/laboratorio#8/ordenador.html
+++ b/laboratorio#8/ordenador.html
@@ -28,7 +28,11 @@
                 </form>
             </div>
         </div>
-         <div><script src="procesos.js"></script></div>
+         <div class="resultado">
+            <h2>Letras</h2>
+            <p>hola porque no salgo</p>
+         </div>
+          <div><script src="procesos.js"></script></div>
     </div>
 </body>
 </html>
