--- a/laboratorio#8/ordenador.html
+++ b/laboratorio#8/ordenador.html
@@ -28,10 +28,11 @@
                 </form>
             </div>
         </div>
+        <br>
+        <br>
          <div class="resultado">
             <h2>Letras</h2>
-            <p>hola porque no salgo</p>
-         </div>
+              <ul  id="resultado"></ul>
           <div><script src="procesos.js"></script></div>
     </div>
 </body>
